# ktrpg

./: .gitignore  .gitmodules  .neotreeignore  .stylua.toml  CMakeLists.txt  README.md  README_NEW.md  README_RU.md  SPOILER_ALERT.md  init.lua  krtpg.lua  module.lua  other.lua
cmake/: functions.cmake  libraries.cmake  version.cmake  write_lua_header.cmake  zig-toolchain.cmake
oldsrc/: main.c
oldsrc/character/: character.c  character.h  weapon.h
oldsrc/location/: location.h
oldsrc/story/: story.c  story.h
scripts/: buildall.sh
scripts/awk/: print_comments.awk
src/: constants.h  functions.c  functions.h  launch_options.c  launch_options.h  lt.c  lt.h  lua_sandbox.c  lua_sandbox.h  lua_tools.c  lua_tools.h  main.c  project_options.c  project_options.h  prompt_options.c  prompt_options.h
src/character/: weapon.c
src/game/: constants.h
src/game/ecs/: components.c  components.h  systems.c  systems.h
src/game/enemy/: components.c  components.h  enemy.c  enemy.h
src/location/: location.c
src/ltest/: ltest.c  ltest.h
src/lua/: alt.lua  example.lua  init.lua  ktrpg.d.lua  module.lua
src/lua/types/ktrpg/: global.d.lua  ktrpg.d.lua
src/lua/types/ktrpg/class/: component.d.lua  entity.d.lua  system.d.lua  util.d.lua
src/luab/: luab_core.c  luab_core.h  luab_helper.c  luab_helper.h  luab_m.c  luab_m.h
src/luaglue/: core.c  core.h
src/luaglue/class/: component.c  component.h  entity.c  entity.h  system.c  system.h  util.c  util.h
src/tgg/: components.c  components.h  systems.c  systems.h  tgg.c  tgg.h  tgg_lua.c  tgg_lua.h  tgg_lua_module.c  tgg_lua_module.h
zdemo/: create_player.lua  init.lua  physical_damage.lua
zgame/: init.lua
zgame/class/: GCache.lua  GComponent.lua
zgame/game/: components.lua
zgame/world/: ktrpg.tiled-project  map.tmx
zgame/world/extensions/: package.json
zgame/world/extensions/ktrpgmapformat/: index.mjs  template.lua
zgame/world/extensions/ktrpgmapformat/function/: filterObjects.mjs  parseLuaTemplate.mjs
